--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-Please see:
+# Apostrophe
 
-plugins/apostrophePlugin/README
+Welcome to Apostrophe! 
 
-For complete and up to date information.
+For complete and extensive documentation of Apostrophe please visit
+[trac.apostrophenow.org](http://trac.apostrophenow.org/wiki/ManualOverview). There you'll find a complete manual organized much more conveniently than is possible with a README file.
